--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -390,7 +390,7 @@
         h1 {
             margin: auto;
             position: relative;
-            font-family: 'Origin-Bold';
+            font-family: 'NeueHaasDisplay-me';
             right: 7px;
             letter-spacing: 6px;
             line-height: 1;
@@ -432,7 +432,7 @@
         h1 {
             margin: 0;
             position: relative;
-            font-family: 'Origin-Bold';
+            font-family: 'NeueHaasDisplay-me';
             left: -12px;
             top: 0;
             line-height: 1.4;
@@ -894,7 +894,7 @@
 
                 h4 {
                     font-size: 1.6em;
-                    font-family: 'Origin-Bold';
+                    font-family: 'NeueHaasDisplay-me';
                 }
             }
 
@@ -904,7 +904,7 @@
                 h3 {
                     font-size: 1.6em;
                     margin-bottom: 20px;
-                    font-family: 'Origin-Bold';
+                    font-family: 'NeueHaasDisplay-me';
                     letter-spacing: 2px;
                     text-transform: uppercase;
                 }
@@ -933,7 +933,7 @@
             color: #fff;
             letter-spacing: 1px;
             text-transform: uppercase;
-            font-family: 'Origin-Bold';
+            font-family: 'NeueHaasDisplay-me';
         }
     }
 
@@ -971,7 +971,7 @@
             color: #fff;
             letter-spacing: 1px;
             text-transform: uppercase;
-            font-family: 'Origin-Bold';
+            font-family: 'NeueHaasDisplay-me';
         }
 
         p {
@@ -1271,7 +1271,7 @@
     display: flex;
     flex: auto;
     flex-direction: row;
-    font-family: 'Origin-Bold';
+    font-family: 'NeueHaasDisplay-me';
 }
 
 
@@ -1289,7 +1289,7 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             text-align: left;
-            font-family: 'Origin-Bold';
+            font-family: 'NeueHaasDisplay-me';
             overflow: hidden;
 
             span {
