--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1494,13 +1494,26 @@
     }
 
     .mobli-cont {
+        // width: 100vw;
+        // height: 100vh;
+        // z-index: 12 !important;
+        // overflow: hidden;
+        // position: relative;
+        display: none;
+        opacity: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         width: 100vw;
         height: 100vh;
+        position: absolute;
         z-index: 12 !important;
         background: #fff;
         overflow: hidden;
 
         .mobli-cont_content {
+            backdrop-filter: blur(15px) !important;
             opacity: 1;
             z-index: 13;
             position: relative;
@@ -1510,15 +1523,14 @@
             bottom: 0;
             width: 100%;
             text-align: center;
-            font-size: 2.6em;
-            overflow: hidden;
+            font-size: 1.6vw;
 
             .wep {
                 padding-right: 5px;
                 display: inline-block;
                 letter-spacing: 2px;
                 font-family: 'NeueHaasDisplay-me';
-                // opacity: 0;
+                opacity: 0;
                 // transform: translateY(100px);
             }
         }
