--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -3931,12 +3931,37 @@ header {
     height: 100vh;
     position: absolute;
     z-index: 12 !important;
-    background: #fff;
+    background: #000000;
     overflow: hidden;
   }
+  .mobli-cont .en-cicle {
+    background-image: url('/assets/resources/img/motion-circle.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 60%;
+    position: absolute;
+    height: 100vh;
+    inset: 0px;
+    will-change: transform, opacity;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .mobli-cont .en-bg {
+    background-image: url('/assets/resources/img/lights-metabolic-5a922075f466090495b1878b25861050.png.webp');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    height: 100vh;
+    width: 468px;
+    inset: 0px;
+    will-change: transform, opacity;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
   .mobli-cont .mobli-cont_content {
-    -webkit-backdrop-filter: blur(15px) !important;
-            backdrop-filter: blur(15px) !important;
     opacity: 1;
     z-index: 13;
     position: relative;
@@ -3946,7 +3971,7 @@ header {
     bottom: 0;
     width: 100%;
     text-align: center;
-    font-size: 1.6vw;
+    font-size: 2.3em;
   }
   .mobli-cont .mobli-cont_content .wep {
     padding-right: 5px;
