--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1509,11 +1509,37 @@
         height: 100vh;
         position: absolute;
         z-index: 12 !important;
-        background: #fff;
+        background: rgb(0, 0, 0);
         overflow: hidden;
 
+        .en-cicle {
+            background-image: url('/assets/resources/img/motion-circle.png');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: 60%;
+            position: absolute;
+            height: 100vh;
+            inset: 0px;
+            will-change: transform, opacity;
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .en-bg {
+            background-image: url('/assets/resources/img/lights-metabolic-5a922075f466090495b1878b25861050.png.webp');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            position: absolute;
+            height: 100vh;
+            width: 468px;
+            inset: 0px;
+            will-change: transform, opacity;
+            opacity: 0;
+            transition: all 0.3s ease-in-out;
+        }
+
         .mobli-cont_content {
-            backdrop-filter: blur(15px) !important;
             opacity: 1;
             z-index: 13;
             position: relative;
@@ -1523,7 +1549,7 @@
             bottom: 0;
             width: 100%;
             text-align: center;
-            font-size: 1.6vw;
+            font-size: 2.3em;
 
             .wep {
                 padding-right: 5px;
