--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -3948,7 +3948,7 @@ header {
     transition: all 0.3s ease-in-out;
   }
   .mobli-cont .en-bg {
-    background-image: url('/assets/resources/img/lights-metabolic-5a922075f466090495b1878b25861050.png.webp');
+    background-image: url('/assets/resources/img/lights.webp');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100%;
