--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1526,7 +1526,7 @@
         }
 
         .en-bg {
-            background-image: url('/assets/resources/img/lights-metabolic-5a922075f466090495b1878b25861050.png.webp');
+            background-image: url('/assets/resources/img/lights.webp');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: 100%;
