--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1556,6 +1556,11 @@
                 display: inline-block;
                 letter-spacing: 2px;
                 font-family: 'NeueHaasDisplay-me';
+                // transform: translateY(100px);
+                color: #fff;
+            }
+
+            .wep .word {
                 opacity: 0;
                 // transform: translateY(100px);
             }
