--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1565,22 +1565,9 @@
                 // transform: translateY(100px);
             }
         }
-    }
-
-    .lapi-d {
-        width: 100vw;
-        height: 100vh;
-        position: relative;
-
-        video {
-            position: absolute;
-            object-fit: cover;
-            z-index: -1;
-            width: 100%;
-            height: 100%;
-        }
 
         .lapi-content {
+            opacity: 1;
             z-index: 13;
             position: relative;
             top: 50%;
@@ -1589,9 +1576,7 @@
             bottom: 0;
             width: 100%;
             text-align: center;
-            font-size: 2.6em;
-            overflow: hidden;
-
+            font-size: 2.3em;
 
 
             .wor {
@@ -1609,6 +1594,51 @@
                 color: #fff;
             }
         }
+
+    }
+
+    .lapi-d {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+
+        video {
+            position: absolute;
+            object-fit: cover;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+        }
+
+        // .lapi-content {
+        //     z-index: 13;
+        //     position: relative;
+        //     top: 50%;
+        //     -webkit-transform: translateY(-50%);
+        //     transform: translateY(-50%);
+        //     bottom: 0;
+        //     width: 100%;
+        //     text-align: center;
+        //     font-size: 2.6em;
+        //     overflow: hidden;
+
+
+
+        //     .wor {
+        //         padding-right: 5px;
+        //         display: inline-block;
+        //         letter-spacing: 2px;
+        //         font-family: 'NeueHaasDisplay-me';
+        //     }
+
+        //     p {
+        //         text-align: center;
+        //         letter-spacing: 3px;
+        //         font-size: 1.3em;
+        //         font-weight: 600;
+        //         color: #fff;
+        //     }
+        // }
 
 
 
