--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1584,6 +1584,7 @@
                 display: inline-block;
                 letter-spacing: 2px;
                 font-family: 'NeueHaasDisplay-me';
+                opacity: 0;
             }
 
             p {
