--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -4000,6 +4000,7 @@ header {
     display: inline-block;
     letter-spacing: 2px;
     font-family: 'NeueHaasDisplay-me';
+    opacity: 0;
   }
   .mobli-cont .lapi-content p {
     text-align: center;
