--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1569,10 +1569,10 @@
         .lapi-content {
             opacity: 1;
             z-index: 13;
-            position: relative;
-            top: 50%;
-            -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
+            position: absolute;
+            top: 43%;
+            // -webkit-transform: translateY(-50%);
+            // transform: translateY(-50%);
             bottom: 0;
             width: 100%;
             text-align: center;
@@ -1588,10 +1588,10 @@
             }
 
             p {
-                text-align: center;
-                letter-spacing: 3px;
-                font-size: 1.3em;
-                font-weight: 600;
+                // text-align: center;
+                // letter-spacing: 3px;
+                // font-size: 1.3em;
+                // font-weight: 600;
                 color: #fff;
             }
         }
