--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -109,7 +109,7 @@
 .accordion-title h2 {
   font-size: 70px;
   /* font-weight: 800; */
-  font-family: 'rogie';
+  font-family: 'NeueHaasDisplay-me';
   letter-spacing: 6px;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-color: rgb(255, 255, 255);
@@ -625,11 +625,22 @@
   #services {
     padding: 5rem 1rem;
 
+    .accordion-title {
+      padding: 40px 0;
+      cursor: pointer;
+    }
+
     .accordion-title h2 {
-      font-size: 38px;
+      font-size: 30px;
       letter-spacing: 3px;
       padding-left: 34px;
       line-height: 1.1;
+      -webkit-text-fill-color: #fff;
+      font-family: 'NeueHaasDisplay-roman';
+      -webkit-text-stroke-color: rgb(255, 255, 255);
+      -webkit-text-stroke: 0.4px;
+      stroke: rgb(255, 255, 255);
+      color: #fff;
     }
 
     .arrow-icon-large svg {
