--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -229,17 +229,6 @@
     padding-bottom: .3665rem;
     margin-bottom: -.5rem;
 }
-.blog-conent {
-    padding: 0 10%;
-    p{
-        letter-spacing: 2px;
-        font-family: 'NeueHaasDisplay-roman';
-        margin-bottom: 11px;
-        font-size: 18px;
-        line-height: 1.6;
-        margin-bottom: 5%;
-    }
-}
 @media (min-width: 1024px){
     .headline-edito {
         font-size: 4.75rem;
@@ -299,22 +288,18 @@
 }
 .blog-right p{
     letter-spacing: 2px;
-        font-family: 'NeueHaasDisplay-roman';
-        margin-bottom: 11px;
-        font-size: 18px;
-        line-height: 1.6;
+    /* font-weight: 400; */
+    font-family: 'NeueHaasDisplay-me';
+    margin-bottom: 11px;
 }
 .p-img{
-    // position: absolute;
-    // top: 7px;
-    // z-index: -1;
+    position: absolute;
+    top: 40px;
+    z-index: -1;
 }
 .p-img img{
     // width: 270px;
 }
-// p{
-//         color: #5c5c5c;
-// }
 .qts{
     padding: 4rem 15rem;
     font-family: 'ogg-medium';
@@ -330,18 +315,17 @@
 
 .blog-details{
     margin-top: 3%;
-    margin-bottom: 11%;
     .container{
         width: 80%;
         .blog-prha{
             text-align: center;
-            font-size: 24px;
-            color: #3d3d3d;
-            font-family: 'NeueHaasDisplay-roman';
-            letter-spacing: 1px;
-            margin-top: 6%;
-            margin-bottom: 4%;
-            padding: 0 0%;
+    font-size: 33px;
+    color: #3d3d3d;
+    font-family: 'NeueHaasDisplay-roman';
+    letter-spacing: 1px;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    padding: 0 10%;
         }
         .content{
             .typ{
@@ -368,22 +352,10 @@
 .blg{
     padding: 0 10%;
 }
-.blog-hero{
-    margin-top: 9%;
-}
+
 @media screen and (max-width:1280px){
     #blogs-sction {
         padding: 0px 10%;
-    }
-    .blog-details .container .content h1 {
-        font-size: 5em;
-        padding: 0px 5%;
-        text-align: center;
-        line-height: 1.4;
-        font-family: 'NeueHaasDisplay-me';
-        transform: translateY(210px);
-        color: #000;
-        text-shadow: 1px 1px 12px rgba(0, 0, 0, 0.219);
     }
 
 }
@@ -454,11 +426,11 @@
         padding: 8%;
     }
     .blog-right p {
+        font-size: 13px;
         letter-spacing: 2px;
+        /* font-weight: 400; */
         font-family: 'NeueHaasDisplay-roman';
         margin-bottom: 11px;
-        font-size: 18px;
-        line-height: 1.6;
     }
     .qts {
         padding: 4rem 2rem;
